# peepomap

./: .coveragerc  .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements.bash
.github/workflows/: ci.yaml
peepomap/: __init__.py  __main__.py  avanti.py  fdtb.py  jazz.py  plus.py  tok.py  tools.py  vapor.py
pepomap/: __init__.py  ons.py  storm.py  tools.py
scripts/: format.bash  lint.bash
src/peepomap/: __init__.py  __main__.py  colormaps.py  exceptions.py  plot.py  tools.py
tests/: __init__.py  test_colormaps.py  test_exceptions.py  test_plot.py  test_tools.py
